# digital-go-board

./: .gitignore  CMakeLists.txt  Coordinate.cpp  Coordinate.h  FrameBuffer.cpp  FrameBuffer.h  Goban.cpp  Goban.h  InputDevice.cpp  InputDevice.h  README.md  main.cpp
Renderer/: EPaperRenderer.cpp  EPaperRenderer.h  Renderer.cpp  Renderer.h  TerminalRenderer.cpp  TerminalRenderer.h
Renderer/EPaper/: BCM2835Connection.cpp  BCM2835Connection.h  EPaperDisplay.cpp  EPaperDisplay.h
